# SlimApp

./: CMakeLists.txt  README.md
src/: SlimApp.h  app.h  base.h  memory.h  shapes.h
src/SlimApp/: app.h
src/SlimApp/core/: base.h  controls.h  memory.h  pixels.h  shapes.h  text.h  time.h
src/examples/: 1_app.c  1_app.cpp  2_defaults.c  2_defaults.cpp  3_time.c  3_time.cpp  4_shapes.c  4_shapes.cpp  5_text.c  5_text.cpp  6_mouse.c  6_mouse.cpp  7_keyboard.c  7_keyboard.cpp  8_game.c  8_memory.c  8_memory.cpp  9_files.c  9_files.cpp
