cmake_minimum_required(VERSION 3.8)

project(SlimApp_1_app)
add_executable(SlimApp_1_app WIN32 src/examples/1_app.cpp)

project(SlimApp_2_defaults)
add_executable(SlimApp_2_defaults WIN32 src/examples/2_defaults.cpp)

project(SlimApp_3_time)
add_executable(SlimApp_3_time WIN32 src/examples/3_time.cpp)

project(SlimApp_4_shapes)
add_executable(SlimApp_4_shapes WIN32 src/examples/4_shapes.cpp)

project(SlimApp_5_text)
add_executable(SlimApp_5_text WIN32 src/examples/5_text.cpp)

project(SlimApp_6_mouse)
add_executable(SlimApp_6_mouse WIN32 src/examples/6_mouse.cpp)

project(SlimApp_7_keyboard)
add_executable(SlimApp_7_keyboard WIN32 src/examples/7_keyboard.cpp)

project(SlimApp_8_memory)
add_executable(SlimApp_8_memory WIN32 src/examples/8_memory.cpp)

project(SlimApp_9_files)
add_executable(SlimApp_9_files WIN32 src/examples/9_files.cpp)